[gd_scene load_steps=6 format=3 uid="uid://dtnrjguhery8r"]

[ext_resource type="Script" path="res://addons/explore-editor-theme/tabs/EditorIcons.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://ds8c70l2dnpy8" path="res://addons/explore-editor-theme/ui/CodePreview.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://c6mun6p3lk1k6" path="res://addons/explore-editor-theme/ui/FilterTool.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://bg7phy5jdt0wl" path="res://addons/explore-editor-theme/ui/TypeTool.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://dwsc0c4b3wt28" path="res://addons/explore-editor-theme/ui/IconSaver.tscn" id="6"]

[node name="Icons" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Layout" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Toolbar" type="HBoxContainer" parent="Layout"]
layout_mode = 2

[node name="Filter" parent="Layout/Toolbar" instance=ExtResource("3")]
layout_mode = 2
label_text = "Filter"

[node name="Type" parent="Layout/Toolbar" instance=ExtResource("4")]
layout_mode = 2

[node name="IconView" type="HBoxContainer" parent="Layout"]
layout_mode = 2
size_flags_vertical = 3

[node name="IconList" type="ItemList" parent="Layout/IconView"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
max_columns = 0
same_column_width = true
fixed_column_width = 220
fixed_icon_size = Vector2i(16, 16)

[node name="IconPanel" type="VBoxContainer" parent="Layout/IconView"]
visible = false
custom_minimum_size = Vector2(340, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="Padding0" type="Control" parent="Layout/IconView/IconPanel"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="IconPreview" type="TextureRect" parent="Layout/IconView/IconPanel"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="IconPreviewInfo" type="Label" parent="Layout/IconView/IconPanel/IconPreview"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 14.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.784314)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_outline_size = 1
text = "64x64"

[node name="Padding1" type="Control" parent="Layout/IconView/IconPanel"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2

[node name="IconName" type="Label" parent="Layout/IconView/IconPanel"]
layout_mode = 2
autowrap_mode = 1

[node name="Padding2" type="Control" parent="Layout/IconView/IconPanel"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2

[node name="IconCode" parent="Layout/IconView/IconPanel" instance=ExtResource("2")]
layout_mode = 2

[node name="IconSaver" parent="Layout/IconView/IconPanel" instance=ExtResource("6")]
layout_mode = 2

[node name="EmptyPanel" type="Control" parent="Layout/IconView"]
custom_minimum_size = Vector2(340, 0)
layout_mode = 2
